manifests/radicale/null-route.yaml
# Created while my homeserver is down
apiVersion: v1
kind: Service
metadata:
  name: radicale-null
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radicale-null
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radicale.bb8.fun`)
      kind: Rule
      services:
        - name: radicale-null
          port: 80
  tls:
    certResolver: cloudflare
    domains:
      - main: "bb8.fun"
        sans:
          - "*.bb8.fun"
